@@ -1,3 +1,9 @@
+Thu Oct 20 02:37:36 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * tools/Split_Plan/Split_Plan.cpp:
+
+          Warnings.
+
 Wed Oct 19 19:14:34 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>
 
         * MPC/config/dance_split_plan.mpb:
